[gd_scene load_steps=14 format=3 uid="uid://c0ssggrw8pwkl"]

[ext_resource type="Script" uid="uid://c726ohtxehr76" path="res://scripts/codex/codex.gd" id="1_aro5d"]
[ext_resource type="Texture2D" uid="uid://kax4jojf14ec" path="res://assets/images/codex-bg.png" id="2_5qrqs"]
[ext_resource type="Texture2D" uid="uid://l6iu7xejottv" path="res://assets/images/codex-book.png" id="3_msqm4"]
[ext_resource type="Texture2D" uid="uid://0ny100cd0ouv" path="res://assets/images/codex-locked-frame.png" id="4_0ariq"]
[ext_resource type="Texture2D" uid="uid://b7p3nxktlja3v" path="res://assets/images/codex-mga-tauhan.png" id="4_gjqs6"]
[ext_resource type="Texture2D" uid="uid://sty6njsikq5t" path="res://assets/images/codex-ibarra.png" id="4_ikfp7"]
[ext_resource type="Theme" uid="uid://cb3r3oyw7hxa0" path="res://theme/label_theme.tres" id="4_skbi3"]
[ext_resource type="FontFile" uid="uid://dv50mgnju4pp6" path="res://assets/fonts/lazy_dog.ttf" id="5_0ariq"]
[ext_resource type="Texture2D" uid="uid://bb6ijqgxpfjhv" path="res://assets/images/close-button.png" id="5_k7umj"]
[ext_resource type="Theme" uid="uid://1t6hcp42xdxm" path="res://theme/panel_container_theme.tres" id="5_ygi2n"]
[ext_resource type="Texture2D" uid="uid://ckosvnfgtxme1" path="res://assets/images/next-button.png" id="7_burad"]
[ext_resource type="Texture2D" uid="uid://cg4huf1pfw8ne" path="res://assets/images/codex-ibarra-right.png" id="8_32d4u"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k7umj"]
texture = ExtResource("4_gjqs6")

[node name="Codex" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_aro5d")

[node name="Background" type="TextureRect" parent="."]
custom_minimum_size = Vector2(1280, 720)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_5qrqs")
expand_mode = 1

[node name="BookUI" type="TextureRect" parent="."]
layout_mode = 2
offset_top = 1.0
offset_right = 1264.0
offset_bottom = 744.0
texture = ExtResource("3_msqm4")
expand_mode = 1

[node name="LeftBook" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 339.0
offset_top = 181.0
offset_right = 587.0
offset_bottom = 543.0
columns = 2

[node name="KabanataImage1" type="TextureRect" parent="LeftBook"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("4_ikfp7")

[node name="KabanataLabel1" type="Label" parent="LeftBook/KabanataImage1"]
layout_mode = 2
offset_left = 38.0
offset_top = 93.0
offset_right = 80.0
offset_bottom = 108.0
theme = ExtResource("4_skbi3")
theme_override_colors/font_color = Color(0.407843, 0.258824, 0.0627451, 1)
theme_override_fonts/font = ExtResource("5_0ariq")
theme_override_font_sizes/font_size = 14
text = "IBARRA"

[node name="KabanataImage2" type="TextureRect" parent="LeftBook"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("4_0ariq")

[node name="KabanataLabel2" type="Label" parent="LeftBook/KabanataImage2"]
layout_mode = 2
offset_left = 24.0
offset_top = 95.0
offset_right = 97.0
offset_bottom = 110.0
theme = ExtResource("4_skbi3")
theme_override_colors/font_color = Color(0.407843, 0.258824, 0.0627451, 1)
theme_override_fonts/font = ExtResource("5_0ariq")
theme_override_font_sizes/font_size = 14
text = "KABANATA 2"

[node name="KabanataImage3" type="TextureRect" parent="LeftBook"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("4_0ariq")

[node name="KabanataLabel3" type="Label" parent="LeftBook/KabanataImage3"]
layout_mode = 2
offset_left = 22.0
offset_top = 95.0
offset_right = 96.0
offset_bottom = 110.0
theme = ExtResource("4_skbi3")
theme_override_colors/font_color = Color(0.407843, 0.258824, 0.0627451, 1)
theme_override_fonts/font = ExtResource("5_0ariq")
theme_override_font_sizes/font_size = 14
text = "KABANATA 3"

[node name="KabanataImage4" type="TextureRect" parent="LeftBook"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("4_0ariq")

[node name="KabanataLabel4" type="Label" parent="LeftBook/KabanataImage4"]
layout_mode = 2
offset_left = 21.0
offset_top = 95.0
offset_right = 97.0
offset_bottom = 110.0
theme = ExtResource("4_skbi3")
theme_override_colors/font_color = Color(0.407843, 0.258824, 0.0627451, 1)
theme_override_fonts/font = ExtResource("5_0ariq")
theme_override_font_sizes/font_size = 14
text = "KABANATA 4"

[node name="KabanataImage5" type="TextureRect" parent="LeftBook"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("4_0ariq")

[node name="KabanataLabel5" type="Label" parent="LeftBook/KabanataImage5"]
layout_mode = 2
offset_left = 21.0
offset_top = 95.0
offset_right = 99.0
offset_bottom = 110.0
theme = ExtResource("4_skbi3")
theme_override_colors/font_color = Color(0.407843, 0.258824, 0.0627451, 1)
theme_override_fonts/font = ExtResource("5_0ariq")
theme_override_font_sizes/font_size = 14
text = "KABANATA 5"

[node name="KabanataImage6" type="TextureRect" parent="LeftBook"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture = ExtResource("4_0ariq")

[node name="KabanataLabel6" type="Label" parent="LeftBook/KabanataImage6"]
layout_mode = 2
offset_left = 20.0
offset_top = 95.0
offset_right = 96.0
offset_bottom = 110.0
theme = ExtResource("4_skbi3")
theme_override_colors/font_color = Color(0.407843, 0.258824, 0.0627451, 1)
theme_override_fonts/font = ExtResource("5_0ariq")
theme_override_font_sizes/font_size = 14
text = "KABANATA 6"

[node name="RightBook" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 696.0
offset_top = 189.0
offset_right = 946.0
offset_bottom = 534.0

[node name="TextureRect" type="TextureRect" parent="RightBook"]
layout_mode = 2
texture = ExtResource("8_32d4u")
stretch_mode = 5

[node name="Name" type="RichTextLabel" parent="RightBook"]
layout_mode = 2
theme_override_font_sizes/bold_font_size = 14
bbcode_enabled = true
text = "[b] [color=#684210] Juan Cris√≥stomo Ibarra 
y Magsalin [/color] [/b]"
fit_content = true
horizontal_alignment = 1

[node name="Label" type="RichTextLabel" parent="RightBook"]
layout_mode = 2
theme_override_font_sizes/bold_font_size = 14
bbcode_enabled = true
text = "[color=#684210] Isang Pilipinong nag-aral sa Europa sa loob ng pitong taon at bumalik sa Pilipinas na may layuning baguhin ang lipunan sa pamamagitan ng edukasyon. [/color]"
fit_content = true
horizontal_alignment = 3
vertical_alignment = 3

[node name="TitleContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.108
anchor_right = 0.505
anchor_bottom = 0.108
offset_left = -206.0
offset_top = -79.76
offset_right = 213.6
offset_bottom = 122.24
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_k7umj")

[node name="CloseContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.767
anchor_top = 0.13
anchor_right = 0.767
anchor_bottom = 0.13
offset_left = -95.5201
offset_top = -35.24
offset_right = 96.52
offset_bottom = 91.92
grow_horizontal = 0
theme = ExtResource("5_ygi2n")
theme_type_variation = &"no_bg"

[node name="CloseButton" type="TextureButton" parent="CloseContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_k7umj")
ignore_texture_size = true
stretch_mode = 0

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.732
anchor_top = 0.84
anchor_right = 0.732
anchor_bottom = 0.84
offset_left = -40.0001
offset_top = -40.0
offset_right = 147.2
offset_bottom = 79.2
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("5_ygi2n")
theme_type_variation = &"no_bg"

[node name="TextureButton" type="TextureButton" parent="PanelContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("7_burad")
ignore_texture_size = true
stretch_mode = 0

[connection signal="button_down" from="CloseContainer/CloseButton" to="." method="_on_close_button_button_down"]
